# ibexharness-benchmark-bot

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: validate-action-pins.sh
.github/workflows/: ci.yml  publish-benchmark-data.yml  release-binary.yml
docs/: APP_SETUP.md  BENCHMARK_BOT.md  RUNBOOK.md  THREAT_MODEL.md
docs/brand/: ibex-harness-wordmark.txt
docs/superpowers/specs/: 2026-07-04-ibexharness-benchmark-bot-design.md
scripts/: github_app.py  publish_benchmark_data.py  verify_dispatch.py
scripts/tests/: test_verify_dispatch.py
src/: artifact.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  publish.rs  validate.rs  verify.rs
src/github/: app.rs  client.rs  http.rs  mod.rs
src/render/: mod.rs  sanitize.rs
tests/: render_test.rs  security_render_test.rs
tests/fixtures/: benchmark-data.json  gate-result.json
